--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <html>
 	<head>
-		<link rel = "stylesheet" type = "text/css" href = "css/index.css">
-		<link rel = "stylesheet" type = "text/css" href = "css/contact.css">
-		<link rel = "stylesheet" type = "text/css" href = "css/projects.css">
-		<link rel = "stylesheet" type = "text/css" href = "css/resume.css">
-		<script src = "./js/page-nav.js" defer></script>
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/contact.css">
+		<link rel="stylesheet" type="text/css" href="css/projects.css">
+		<link rel="stylesheet" type="text/css" href="css/resume.css">
+		<script src="./js/page-nav.js" defer></script>
 	</head>
 	<body>
-		<div id = "navbar">
+		<div id="navbar">
 			<ul>
 				<li>
-					<button id = "projects">
+					<button id="projects">
 						Projects
 					</button>
 				</li>
 				<li>
-					<button id = "resume">
+					<button id="resume">
 						Resume
 					</button>
 				</li>
 				<li>
-					<button id = "contact">
+					<button id="contact">
 						Contact
 					</button>
 				</li>
 			</ul>
 		</div>
-		<div id = "header">
+		<div id="header">
 			<h1>
 				Dylan Conrad Johnson
 			</h1>
@@ -36,7 +37,7 @@
 				Currently I am in Utah while I intern at Ancestry.com.
 			</p>
 		</div>
-		<div id = "content">
+		<div id="content">
 		</div>
 	</body>
 </html>
