--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,9 +1,9 @@
-<div id = "resume">
+<div id="resume">
 	<h1>
 		Resume
 	</h1>
-	<object data = "../pdf/resume.pdf" type = "application/pdf" width = "100%" height = "100%">
-		<a href = "../pdf/resume.pdf">
+	<object data="../pdf/resume.pdf" type="application/pdf" id="resumeview">
+		<a href="../pdf/resume.pdf">
 			My Resume
 		</a>
 	</object>
