index.css update

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 		<div id="navbar">
 			<ul>
 				<li>
-					<button id="projects">
+					<button id="projects" class="nav">
 						Projects
 					</button>
 				</li>
 				<li>
-					<button id="resume">
+					<button id="resume" class="nav">
 						Resume
 					</button>
 				</li>
 				<li>
-					<button id="contact">
+					<button id="contact" class="nav">
 						Contact
 					</button>
 				</li>
