--- a/presentations/comm/index.html
+++ b/presentations/comm/index.html
@@ -38,7 +38,7 @@
 	  <textarea data-template>
 	    ##  Importance
 
-	    Medical Communication has implications on achieving better results in medicine.
+	    Medical Communication has implications for achieving better results in medicine.
 
 	    I am a Type 1 Diabetic. 
 	  </textarea>
