--- a/presentations/comm/index.html
+++ b/presentations/comm/index.html
@@ -97,7 +97,7 @@
 	    A study by Begum et al asked the question of what constitutes good communication and
 	    doctor-patient relationships.
 
-	    Also analyzed medical interviews by doctors from the UK, India, and Egypt.
+	    Also analyzed medical interviews by doctors from India, the UK, and Egypt.
 	  </textarea>
 	</section>
 	<section data-markdown>
