--- a/presentations/comm/index.html
+++ b/presentations/comm/index.html
@@ -29,7 +29,7 @@
       <div class="slides">
 	<section data-markdown>
 	  <textarea data-template>
-	    ## Single Payer healthcare
+	    ## Single Payer health care
 
 	    ### Dylan Johnson
 	  </textarea>
@@ -40,7 +40,7 @@
 
 	    A state run health insurance option.
 
-	    Usually finianced by taxes.
+	    Usually financed by taxes.
 
 	    Can take several forms.
 	  </textarea>
@@ -93,7 +93,7 @@
 	  <textarea data-template>
 	    ## France
 
-	    Runs a national health insurace scheme.
+	    Runs a national health insurance scheme.
 
 	    Mix of public and private care providers.
 
