--- a/presentations/comm/index.html
+++ b/presentations/comm/index.html
@@ -38,7 +38,7 @@
 	  <textarea data-template>
 	    ## What is single payer health care?
 
-	    A state run health insurance option.
+	    A state run health insurance program.
 
 	    Usually financed by taxes.
 
